UI, Get & Update Method

--- a/todolist/pubspec.yaml
+++ b/todolist/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   cloud_firestore: ^4.4.3
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.2
+  flutter_animate: ^4.1.0
+  lite_rolling_switch: ^1.0.1
 
 dev_dependencies:
   flutter_test:
