--- a/todolist/pubspec.yaml
+++ b/todolist/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_bloc: ^8.1.2
   flutter_animate: ^4.1.0
   lite_rolling_switch: ^1.0.1
+  cool_alert: ^1.1.0
 
 dev_dependencies:
   flutter_test:
