--- a/todolist/pubspec.yaml
+++ b/todolist/pubspec.yaml
@@ -17,8 +17,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.2
   flutter_animate: ^4.1.0
-  lite_rolling_switch: ^1.0.1
   cool_alert: ^1.1.0
+  load_switch: ^1.2.0
 
 dev_dependencies:
   flutter_test:
