--- a/todolist/pubspec.yaml
+++ b/todolist/pubspec.yaml
@@ -20,12 +20,17 @@ dependencies:
   cool_alert: ^1.1.0
   load_switch: ^1.2.0
 
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
-
+  mockito: ^5.3.2
+  bloc_test: ^9.1.1
+  build_runner: ^2.2.1
+  
 flutter:
 
   uses-material-design: true
